src/snapshots/insert_last_child@diff.snap
---
source: src/org.rs
description: "--- pre.org\n+++ post.org\n@@ -1,14 +1,16 @@\n * TODO a\n :PROPERTIES:\n :id: a\n :END:\n \n ** TODO b\n :PROPERTIES:\n :id: b\n :END:\n \n ** TODO c\n :PROPERTIES:\n :id: c\n :END:\n+\n+** TODO inserted\n"
input_file: fixtures/insert_last_child/pre.org
---
Diff {
    added: MaybeIdMap {
        fresh: {
            Headline {
                syntax: HEADLINE@110..127
                  HEADLINE_STARS@110..112 "**"
                  WHITESPACE@112..113 " "
                  HEADLINE_KEYWORD_TODO@113..117 "TODO"
                  WHITESPACE@117..118 " "
                  HEADLINE_TITLE@118..126
                    TEXT@118..126 "inserted"
                  NEW_LINE@126..127 "\n"
                ,
            },
        },
        map: {},
    },
    removed: MaybeIdMap {
        fresh: {},
        map: {},
    },
    changed: {},
    moves: [],
}
